--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -31,7 +31,7 @@
     "mongodb": "^4.5.0",
     "mongoose": "^6.0.5",
     "needle": "^3.0.0",
-    "nodemon": "^2.0.15",
+    "nodemon": "^1.3.3",
     "p-iteration": "^1.1.8",
     "role-acl": "^4.5.4",
     "xlsx": "^0.18.2",
@@ -45,7 +45,6 @@
     "@types/express-fileupload": "^1.2.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.182",
-    "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/needle": "^2.5.3",
     "@types/node": "^17.0.16",
@@ -65,5 +64,9 @@
     "ts-node": "^10.5.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.2"
+  },
+  "overrides": {
+    "update-notifier": "6.0.1",
+    "chokidar": "3.5.3"
   }
 }
