--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -24,7 +24,7 @@
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
     "swr": "^1.1.2",
     "typescript": "^4.4.2"
@@ -73,5 +73,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:7777"
+  "proxy": "http://localhost:7777",
+  "overrides": {
+    "@svgr/webpack": "6.2.1"
+  }
 }
